feat: setup script, frontend table, favorite button

--- a/frontend/src/components/table/Table.css
+++ b/frontend/src/components/table/Table.css
@@ -1,3 +1,16 @@
 .Table {
-    border: 1px solid red;
+    margin: 0;
+}
+
+.Table .table {
+    margin: 0;
+}
+
+.favorite {
+    color: gold;
+}
+
+.not-favorite {
+    opacity: 50%;
+    color: gray;
 }
