--- a/frontend/src/components/pokedex/Pokedex.css
+++ b/frontend/src/components/pokedex/Pokedex.css
@@ -1,4 +1,17 @@
-.disabled-button {
-    opacity: 50%;
+.Pokedex {
+    height: calc(100% - 3rem);
 }
 
+.Pokedex svg {
+    margin: 0 0.5rem;
+}
+
+.disabled-button {
+    opacity: 50%;
+    color: gray;
+}
+
+.pokemon-count, .pagination-toolbar {
+    margin-left: 0.5rem;
+    margin-bottom: 0;
+}
